# AWP-Stuff

./: .gitignore  OBM.md
Design-Patterns/Observer/: CMakeLists.txt  EventManager.cpp  EventManager.h  IEventListener.h.gch  a.out  main.cpp
Design-Patterns/Observer/Events/: IEventListener.h  testEventListener.cpp  testEventListener.h
Design-Patterns/Observer/Observer/: CMakeLists.txt  IObserver.h  ISubject.h  Observer.cpp  Observer.h
Design-Patterns/Observer/Subject/: CMakeLists.txt  ISubject.h  Subject.cpp  Subject.h
Gassigehen/: a.out
QT/ModelViewController/: ModelViewController.pro  main.cpp  model.cpp  model.h  view.cpp  view.h  view.ui
QT/Wetterstation/: Wetterstation.pro  feuchtesensor.cpp  feuchtesensor.h  idatagate.cpp  idatagate.h  main.cpp  model.cpp  model.h  temperaturrsensor.cpp  temperaturrsensor.h  temperatursensor.cpp  temperatursensor.h  view.cpp  view.h  view.ui
QT/Window_Test/: MyGame.cpp  MyGame.h  Window_Test.pro  main.cpp
